# Educoin

./: .gitlab-ci.yml  README.md
BinaryTree/: .gitlab-ci.yml  BinaryTree.hpp  Makefile  binaryTreeSort.cpp  gTests.cpp
BucketSort/: BucketSort.hpp  Makefile  main.cpp
BucketSort/Tester/: gTests.cpp  gTests.hpp
Calculator/: Makefile
Calculator/Tester/: Makefile
Educoin/Calculator/Tester/: gTests.cpp
HashTable/: HashTable.cpp  HashTable.hpp  main.cpp
MultMatrix/: some_sort.cpp
Speller/: BinTreeDictionary.hpp  CMakeLists.txt  Checker.hpp  IDictionary.hpp  MyHashTableDictionary.hpp  README.md  StdHashTableDictionary.hpp  TextParser.hpp  TrieDictionary.hpp  VectorDictionary.hpp  main.cpp
Speller/texts/: test.txt
TextParser/: TextParser.hpp
Trie/: Trie.hpp  main.cpp
UnorderedBinaryTree/: UnorderedBinaryTree.hpp
